[package]
authors = ["Scott Mohekey <smohekey@insightful.co.nz>"]
categories = ["parsing"]
description = "An opinionated parser library for Rust"
documentation = "https://docs.rs/syntax"
edition = "2021"
keywords = ["parser", "parser-combinators", "diagnostics", "combinators"]
license = "MIT OR Apache-2.0"
name = "syntax"
readme = "README.md"
repository = "https://github.com/smohekey/syntax"
version = "0.1.0-alpha0"

[dependencies]
async-stream = "0.3.5"
futures = "0.3.30"
log = "0.4.22"
thiserror = "1.0.63"
